kubernetes/main/apps/default/nas/rustfs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-api
  namespace: default
spec:
  clusterIP: None
  ports:
    - name: https
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-web
  namespace: default
spec:
  clusterIP: None
  ports:
    - name: https
      port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: rustfs-web
  namespace: default
  labels:
    kubernetes.io/service-name: rustfs-web
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.1.3"
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 9001
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: rustfs-api
  namespace: default
  labels:
    kubernetes.io/service-name: rustfs-api
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.1.3"
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 9000
    protocol: TCP
