kubernetes/main/apps/default/nas/rustfs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
  name: internal-rustfs-api
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: &host s3.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-api
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
  name: internal-rustfs-web
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: &host rustfs.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-web
                port:
                  number: 9001
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
